--- a/.github/workflows/build_and_deploy_sarvent.yaml
+++ b/.github/workflows/build_and_deploy_sarvent.yaml
@@ -6,6 +6,9 @@ on:
       container_name:
         description: 'Container Name'
         required: true
+      source_container_name:
+        description: 'Source Container Name'
+        required: true
       tag_name:
         description: 'Tag Name'
         required: true
@@ -27,7 +30,7 @@ jobs:
     - name: Check for base image update
       id: check_base_image
       run: |
-        echo "::set-output name=updated::$(docker pull bitnami/wordpress:${{ github.event.inputs.tag_name }} | grep -q 'Image is up to date' && echo 'false' || echo 'true')"
+        echo "::set-output name=updated::$(docker pull ${{ github.event.inputs.source_container_name }}:${{ github.event.inputs.tag_name }} | grep -q 'Image is up to date' && echo 'false' || echo 'true')"
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
