--- a/.github/workflows/build_and_deploy_sarvent.yaml
+++ b/.github/workflows/build_and_deploy_sarvent.yaml
@@ -1,13 +1,10 @@
-name: Build and Deploy Docker Image
+name: Build and Deploy Docker Image - SarvEnt
 
 on:
   workflow_dispatch:
     inputs:
       container_name:
         description: 'Container Name'
-        required: true
-      source_container_name:
-        description: 'Source Container Name'
         required: true
       tag_name:
         description: 'Tag Name'
@@ -27,20 +24,15 @@ jobs:
         username: ${{ secrets.SARVENT_DOCKERHUB_USERNAME }}
         password: ${{ secrets.SARVENT_DOCKERHUB_ACCESS_TOKEN }}
 
-    - name: Check for base image update
-      id: check_base_image
-      run: |
-        echo "::set-output name=updated::$(docker pull ${{ github.event.inputs.source_container_name }}:${{ github.event.inputs.tag_name }} | grep -q 'Image is up to date' && echo 'false' || echo 'true')"
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
     - name: Build and push Docker image
-      if: steps.check_base_image.outputs.updated == 'true'
       uses: docker/build-push-action@v2
       with:
         context: ./${{ github.event.inputs.container_name }}
         platforms: linux/amd64,linux/arm64
+        pull: true
         push: true
         tags: sarvent/${{ github.event.inputs.container_name }}:${{ github.event.inputs.tag_name }}
         build-args: |
